--- a/index.html
+++ b/index.html
@@ -6,91 +6,219 @@
 
     <style>
 
-      .page-header {
-        height: 30px;
-        font-size: 100%;
-        text-transform: uppercase;
-        text-align: center;
-      }
-
-      .page-image {
-        height: 100%;
-        background-size: contain;
-        background-position: center center;
-        background-repeat: no-repeat;
-      }
-
       .responsive {
         width: 100%;
         height: auto;
       }
 
+      .flip-book {
+         box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+         display: none;
+         background-size: cover;
+      }
+       .page {
+         padding: 20px;
+         background-color: #fdfaf7;
+         color: #785e3a;
+         border: solid 1px #c2b5a3;
+         overflow: hidden;
+      }
+       .page .page-content {
+         width: 100%;
+         height: 100%;
+         display: flex;
+         flex-direction: column;
+         justify-content: space-between;
+         align-items: stretch;
+      }
+       .page .page-content .page-header {
+         height: 30px;
+         font-size: 100%;
+         text-transform: uppercase;
+         text-align: center;
+      }
+       .page .page-content .page-image {
+         height: 100%;
+         background-size: contain;
+         background-position: center center;
+         background-repeat: no-repeat;
+      }
+       .page .page-content .page-text {
+         height: 100%;
+         flex-grow: 1;
+         font-size: 80%;
+         text-align: justify;
+         margin-top: 10px;
+         padding-top: 10px;
+         box-sizing: border-box;
+         border-top: solid 1px #f4e8d7;
+      }
+       .page .page-content .page-footer {
+         height: 30px;
+         border-top: solid 1px #f4e8d7;
+         font-size: 80%;
+         color: #998466;
+      }
+       .page.--left {
+         border-right: 0;
+         box-shadow: inset -7px 0 30px -7px rgba(0, 0, 0, 0.4);
+      }
+       .page.--right {
+         border-left: 0;
+         box-shadow: inset 7px 0 30px -7px rgba(0, 0, 0, 0.4);
+      }
+       .page.--right .page-footer {
+         text-align: right;
+      }
+       .page.hard {
+         background-color: #f2e8d9;
+         border: solid 1px #998466;
+      }
+       .page.page-cover {
+         background-color: #e3d0b5;
+         color: #785e3a;
+         border: solid 1px #998466;
+      }
+       .page.page-cover h2 {
+         text-align: center;
+         padding-top: 50%;
+         font-size: 210%;
+      }
+       .page.page-cover.page-cover-top {
+         box-shadow: inset 0px 0 30px 0px rgba(36, 10, 3, 0.5), -2px 0 5px 2px rgba(0, 0, 0, 0.4);
+      }
+       .page.page-cover.page-cover-bottom {
+         box-shadow: inset 0px 0 30px 0px rgba(36, 10, 3, 0.5), 10px 0 8px 0px rgba(0, 0, 0, 0.4);
+      }
 
     </style>
+
+
 
   </head>
   <body>
 
     <script src="./page-flip.browser.js"></script>
 
-    <h1>Home Sweet Tree</h1>
-
-    <div id="book">
-         <div class="my-page" data-density="hard">
-            <div class="page-content">
-                <div class="page-image"> <img src="img/FrontCover.jpg" alt="FrontCover" class="responsive""> </div>
-            </div>
-        </div>
-        <div class="my-page">
-            <div class="page-content">
-                <div class="page-image"> <img src="img/InsideFrontCover.jpg" alt="InsideFrontCover" class="responsive""> </div>
-            </div>
-        </div>
-        <div class="my-page">
-            <div class="page-content">
-                <div class="page-image"> <img src="img/Frontispiece.jpg" alt="Frontispiece" class="responsive""> </div>
-            </div>
-        </div>
-        <div class="my-page">
-        </div>
-        <div class="my-page">
-        </div>
-        <div class="my-page" data-density="hard">
-        </div>
+    <div class="container">
+      <div id="book">
+           <div class="my-page" data-density="hard">
+              <div class="page-content">
+                  <div class="page-image"> <img src="img/FrontCover.jpg" alt="FrontCover" class="responsive""> </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image"> <img src="img/InsideFrontCover.jpg" alt="InsideFrontCover" class="responsive""> </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image"> <img src="img/Frontispiece.jpg" alt="Frontispiece" class="responsive""> </div>
+              </div>
+          </div>
+          <div class="my-page">
+          </div>
+          <div class="my-page">
+          </div>
+          <div class="my-page" data-density="hard">
+          </div>
+      </div>
     </div>
 
-
     <script>
-      console.log('asdfasdf');
-      const pageFlip = new St.PageFlip(document.getElementById('book'), {
-        width: 400, // required parameter - base page width
-        height: 560, // required parameter - base page height
-        showCover: true, // required parameter - base page height
+
+      document.addEventListener('DOMContentLoaded', function() {
+          console.log("All loaded")
+          // const pageFlip = new PageFlip(
+          const pageFlip = new St.PageFlip(
+              document.getElementById("book"),
+              {
+                  width: 550, // base page width
+                  height: 733, // base page height
+
+                  // size: "stretch",
+                  // set threshold values:
+                  minWidth: 315,
+                  maxWidth: 1000,
+                  minHeight: 420,
+                  maxHeight: 1350,
+
+                  maxShadowOpacity: 0.5, // Half shadow intensity
+                  showCover: true,
+                  mobileScrollSupport: false // disable content scrolling on mobile devices
+              }
+          );
+
+          // load pages
+          pageFlip.loadFromHTML(document.querySelectorAll(".my-page"));
+
+          document.querySelector(".page-total").innerText = pageFlip.getPageCount();
+          document.querySelector(
+              ".page-orientation"
+          ).innerText = pageFlip.getOrientation();
+
+          document.querySelector(".btn-prev").addEventListener("click", () => {
+              pageFlip.flipPrev(); // Turn to the previous page (with animation)
+          });
+
+          document.querySelector(".btn-next").addEventListener("click", () => {
+              pageFlip.flipNext(); // Turn to the next page (with animation)
+          });
+
+          // triggered by page turning
+          pageFlip.on("flip", (e) => {
+              document.querySelector(".page-current").innerText = e.data + 1;
+          });
+
+          // triggered when the state of the book changes
+          pageFlip.on("changeState", (e) => {
+              document.querySelector(".page-state").innerText = e.data;
+          });
+
+          // triggered when page orientation changes
+          pageFlip.on("changeOrientation", (e) => {
+              document.querySelector(".page-orientation").innerText = e.data;
+          });
       });
-        // size: stretch, // required parameter - base page height
-
-      pageFlip.loadFromHTML(document.querySelectorAll('.my-page'));
-
-      pageFlip.on('flip', (e) => {
-              console.log("Current page: " + e.data);
-              // callback code
-          }
-      );
-
-      pageFlip.on('changeOrientation', (e) => {
-              console.log("Orientation Change: " + e.data);
-              // callback code
-          }
-      );
-
-      pageFlip.on('changeState', (e) => {
-              console.log("State Change: " + e.data);
-              // callback code
-          }
-      );
-
 
     </script>
+
+    <!-- script>
+        // const setWidth = 500;
+        const setWidth = window.innerWidth / 2.8;
+        const pageFlip = new St.PageFlip(document.getElementById('book'), {
+          // width: 500, // required parameter - base page width
+          // height: 600, // required parameter - base page height
+          width: setWidth, // required parameter - base page width
+          height: setWidth * 1.38, // required parameter - base page height
+          // width: window.innerWidth, // required parameter - base page width
+          // height: window.innerWidth * 1.38, // required parameter - base page height
+          showCover: true,
+          // size: stretch,
+        });
+
+        pageFlip.loadFromHTML(document.querySelectorAll('.my-page'));
+
+        pageFlip.on('flip', (e) => {
+                console.log("Current page: " + e.data);
+                // callback code
+            }
+        );
+
+        pageFlip.on('changeOrientation', (e) => {
+                console.log("Orientation Change: " + e.data);
+                // callback code
+            }
+        );
+
+        pageFlip.on('changeState', (e) => {
+                console.log("State Change: " + e.data);
+                // callback code
+            }
+        );
+
+    </script -->
 
   </body>
 </html>
