smaller jpg sizes
Signed-off-by: Martin H. J. Bramwell <martinhbramwell@gmail.com>

--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
       <div id="book">
            <div class="my-page" data-density="hard">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/FrontCover.jpg" alt="FrontCover" class="responsive""> </div>
+                  <div class="page-image"> <img src="img/FrontCover2.jpg" alt="FrontCover" class="responsive""> </div>
               </div>
           </div>
           <div class="my-page">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/InsideFrontCover.jpg" alt="InsideFrontCover" class="responsive""> </div>
+                  <div class="page-image"> <img src="img/InsideFrontCover2.jpg" alt="InsideFrontCover" class="responsive""> </div>
               </div>
           </div>
           <div class="my-page">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/Frontispiece.jpg" alt="Frontispiece" class="responsive""> </div>
+                  <div class="page-image"> <img src="img/Frontispiece2.jpg" alt="Frontispiece" class="responsive""> </div>
               </div>
           </div>
           <div class="my-page">
