--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
 
     <script src="./page-flip.browser.js"></script>
 
+
+
+    <div class="container">
+        <div>
+            <button type="button" class="btn-prev">Previous page</button>
+            <button type="button" class="btn-next">Next page</button>
+        </div>
+    </div>
+
+    <div class="container">
+        <div>
+            [<span class="page-current">1</span> of <span class="page-total">-</span>]
+            State: <i class="page-state">read</i>, orientation: <i class="page-orientation">landscape</i>
+        </div>
+    </div>
+
     <div class="container">
       <div id="book">
            <div class="my-page" data-density="hard">
@@ -125,6 +141,7 @@
           </div>
       </div>
     </div>
+
 
     <script>
 
