--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
        .page.page-cover.page-cover-bottom {
          box-shadow: inset 0px 0 30px 0px rgba(36, 10, 3, 0.5), 10px 0 8px 0px rgba(0, 0, 0, 0.4);
       }
+       .tiny {
+         font-size: 50%;
+      }
+       .button {
+          border: 0px;
+          padding: 0px;
+          width: 30px;
+        }
 
     </style>
 
@@ -104,13 +112,17 @@
 
     <div class="container">
         <div>
-            <button type="button" class="btn-prev">Previous page</button>
-            <button type="button" class="btn-next">Next page</button>
+            <button type="button" class="btn-prev">
+              <img src="img/Previous.jpg" alt="Previous Page" class="button"/>
+            </button>
+            <button type="button" class="btn-next">
+              <img src="img/Next.jpg" alt="Next Page" class="button"/>
+            </button>
         </div>
     </div>
 
     <div class="container">
-        <div>
+        <div class="tiny">
             [<span class="page-current">1</span> of <span class="page-total">-</span>]
             State: <i class="page-state">read</i>, orientation: <i class="page-orientation">landscape</i>
         </div>
@@ -120,17 +132,17 @@
       <div id="book">
            <div class="my-page" data-density="hard">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/FrontCover2.jpg" alt="FrontCover" class="responsive""> </div>
+                  <div class="page-image"> <img src="img/FrontCover2.jpg" alt="FrontCover" class="responsive"> </div>
               </div>
           </div>
           <div class="my-page">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/InsideFrontCover2.jpg" alt="InsideFrontCover" class="responsive""> </div>
+                  <div class="page-image"> <img src="img/InsideFrontCover2.jpg" alt="InsideFrontCover" class="responsive"> </div>
               </div>
           </div>
           <div class="my-page">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/Frontispiece2.jpg" alt="Frontispiece" class="responsive""> </div>
+                  <div class="page-image"> <img src="img/Frontispiece2.jpg" alt="Frontispiece" class="responsive"> </div>
               </div>
           </div>
           <div class="my-page">
