--- a/index.html
+++ b/index.html
@@ -93,11 +93,24 @@
        .tiny {
          font-size: 50%;
       }
-       .button {
-          border: 0px;
-          padding: 0px;
-          width: 30px;
-        }
+
+      .btn-prev {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-right: 15px;
+        margin-left: 30px;
+      }
+
+      .btn-next {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-right: 30px;
+        margin-left: 15px;
+      }
+
+      .button {
+        width: 60px;
+      }
 
     </style>
 
