--- a/index.html
+++ b/index.html
@@ -181,17 +181,282 @@
       <div id="book">
            <div class="my-page" data-density="hard">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/FrontCover2.jpg" alt="FrontCover" class="responsive"> </div>
+                  <div class="page-image">
+                    <img src="img/FrontCover.jpg" alt="FrontCover" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page" data-density="hard">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/InsideFrontCover.jpg" alt="InsideFrontCover" class="responsive">
+                  </div>
               </div>
           </div>
           <div class="my-page">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/InsideFrontCover2.jpg" alt="InsideFrontCover" class="responsive"> </div>
+                  <div class="page-image">
+                    <img src="img/Frontispiece.jpg" alt="Frontispiece" class="responsive">
+                  </div>
               </div>
           </div>
           <div class="my-page">
               <div class="page-content">
-                  <div class="page-image"> <img src="img/Frontispiece2.jpg" alt="Frontispiece" class="responsive"> </div>
+                  <div class="page-image">
+                    <img src="img/FrontispieceBack.jpg" alt="FrontispieceBack" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/TitlePage.jpg" alt="TitlePage" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page002.jpg" alt="Page002" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page003.jpg" alt="Page003" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page004.jpg" alt="Page004" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page005.jpg" alt="Page005" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page006.jpg" alt="Page006" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page007.jpg" alt="Page007" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page008.jpg" alt="Page008" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page009.jpg" alt="Page009" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page010.jpg" alt="Page010" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page011.jpg" alt="Page011" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page012.jpg" alt="Page012" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page013.jpg" alt="Page013" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page014.jpg" alt="Page014" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page015.jpg" alt="Page015" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page016.jpg" alt="Page016" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page017.jpg" alt="Page017" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page018.jpg" alt="Page018" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page019.jpg" alt="Page019" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page020.jpg" alt="Page020" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page021.jpg" alt="Page021" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page022.jpg" alt="Page022" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page023.jpg" alt="Page023" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page024.jpg" alt="Page024" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page025.jpg" alt="Page025" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page026.jpg" alt="Page026" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page027.jpg" alt="Page027" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page028.jpg" alt="Page028" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page029.jpg" alt="Page029" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page030.jpg" alt="Page030" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page031.jpg" alt="Page031" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page032.jpg" alt="Page032" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Page033.jpg" alt="Page033" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/Rear.jpg" alt="Rear" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page" data-density="hard">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/InsideBackCover.jpg" alt="InsideBackCover" class="responsive">
+                  </div>
+              </div>
+          </div>
+          <div class="my-page" data-density="hard">
+              <div class="page-content">
+                  <div class="page-image">
+                    <img src="img/BackCover.jpg" alt="BackCover" class="responsive">
+                  </div>
               </div>
           </div>
           <div class="my-page">
@@ -206,10 +471,15 @@
 
     <script>
 
-      const tracks = new Array();
+      const portraitTracks = new Array();
 
-      tracks[0] = "aud/test.mp3";
-      tracks[1] = "aud/bell.mp3";
+      portraitTracks[0] = "aud/test.mp3";
+      portraitTracks[1] = "aud/bell.mp3";
+
+      const landscapeTracks = new Array();
+
+      landscapeTracks[0] = "aud/test.mp3";
+      landscapeTracks[1] = "aud/bell.mp3";
 
       document.addEventListener('DOMContentLoaded', function() {
           console.log("All loaded")
@@ -263,7 +533,7 @@
             if (state === 'read' && ['flipping','user_fold'].includes(lastState)){
               const pageNumber = pageFlip.getCurrentPageIndex();
               console.log(`New page : ${pageNumber + 1}`);
-              playPauseMedia(tracks[0]);
+              playPauseMedia(portraitTracks[1]);
             }
             lastState = state;
           });
